media/nzbget/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nzbget
  namespace: plex
  labels:
    app.kubernetes.io/name: nzbget
    app.kubernetes.io/instance: nzbget
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nzbget
      app.kubernetes.io/instance: nzbget
  serviceName: ""
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nzbget
        app.kubernetes.io/instance: nzbget
    spec:
      containers:
        - name: oauth-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v6.1.1@sha256:791aef35b8d1d2a325028b188d5a650605d69985a0dab1233c06079e7321eee0
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 4180
            name: http
          args:
          - --http-address=:4180
          - --https-address=
          - --provider=keycloak
          - --keycloak-group=/admin
          - --email-domain=*
          - --scope=openid profile email
          - --login-url=https://sso.srueg.ch/auth/realms/lab/protocol/openid-connect/auth
          - --redeem-url=https://sso.srueg.ch/auth/realms/lab/protocol/openid-connect/token
          - --validate-url=https://sso.srueg.ch/auth/realms/lab/protocol/openid-connect/userinfo
          - --upstream=http://localhost:6789
          - --reverse-proxy
          - --silence-ping-logging
          - --cookie-expire=1h
          - --skip-provider-button
          livenessProbe:
            initialDelaySeconds: 30
            httpGet:
              path: /ping
              port: http
          readinessProbe:
            httpGet:
              path: /ping
              port: http
        - name: nzbget
          image: docker.io/linuxserver/nzbget:v21.1-r2311-ls9@sha256:e1def230249d6c54c78b7acfe1415f34023ba9ed558afe7275dcac1cb39a9a25
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /config/
              name: config
            - mountPath: /downloads/
              name: downloads
              subPath: addons/nzbget/
            - mountPath: /intermediate/
              name: intermediate
          ports:
            - name: nzbget
              containerPort: 6789
          livenessProbe:
            httpGet:
              path: /
              port: nzbget
            initialDelaySeconds: 60
          readinessProbe:
            httpGet:
              path: /
              port: nzbget
      terminationGracePeriodSeconds: 60
      volumes:
        - name: intermediate
          persistentVolumeClaim:
            claimName: nzbget-downloads
        - name: downloads
          persistentVolumeClaim:
            claimName: plex-data
        - name: config
          persistentVolumeClaim:
            claimName: nzbget-config
