media/nzbget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbget
  namespace: plex
  labels:
    app.kubernetes.io/name: nzbget
    app.kubernetes.io/instance: nzbget
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app.kubernetes.io/name: nzbget
    app.kubernetes.io/instance: nzbget
